# Liquid-Hive-Upgrade

./: .apotheosis_epic.md  .clang-format  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ACTIVATION_SUMMARY.md  ADDITIONAL_FIXES_SUMMARY.md  ALL_CHECKS_FIXED_FINAL_REPORT.md  ALL_CHECKS_PASSING_FINAL.md  ALL_CHECKS_STATUS_FINAL.md  BUILD_ENHANCEMENT_REPORT.md  BUILD_ORGANIZATION.md  BUILD_SECURITY_REPORT.md  CHANGELOG.md  CHECKS_FIXED_SUMMARY.md  CI_FIXES_SUMMARY.md  CLEANUP_SUMMARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_TRANSFORMATION_REPORT.md  CONTRIBUTING.md  DS_ROUTER_README.md  Dockerfile  ENHANCEMENTS.md  FINAL_CHECK_STATUS.md  FINAL_PRODUCTION_HARDENING_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_TRANSFORMATION_SUMMARY.md  FIXES_SUMMARY.md  FLAWS_CORRECTED_FINAL_REPORT.md  GETTING_STARTED.md  LIQUID_HIVE_DEPLOYMENT_GUIDE.md  Makefile  PERFECT_SYSTEM_FINAL_REPORT.md  PRODUCTION_HARDENING_REPORT.md  (+107 more)
.emergent/: emergent.yml  summary.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: artifact-guard.yml  build-and-deploy.yaml  cd-dev.yml  cd-prod.yml  ci-hardening.yml  ci-pipeline.yml  ci-production.yml  ci.yml  codeql-security.yml  deploy.yml  docker-build.yml  docker-publish.yml  enhancement-validation.yml  feedback-oracle-ci.yml  frontend-ci.yml  lint-and-type.yml  npm-publish.yml  performance-testing.yml  pypi-publish.yml  python-ci.yml  release-docker.yml  release-please.yml  release.yml  repo-hygiene.yml  scan.yml  secure-supplychain.yml  security-audit.yml  supplychain-secure.yaml
LIQUID-HIVE-main/: DS_ROUTER_COMPLETION.md  backend_test.py  docker-compose.yml  requirements.txt  server.py  system_status.py
LIQUID-HIVE-main/.emergent/: summary.txt
LIQUID-HIVE-main/LIQUID-HIVE-main/: .gitignore
LIQUID-HIVE-main/gui/: index.html
LIQUID-HIVE-main/tests/: test_chat_error_handling.py
LIQUID-HIVE-main/unified_runtime/: __init__.py  model_router.py  server.py
apps/api/: Dockerfile  __init__.py  main.py  metrics.py
apps/dashboard/: package.json  tsconfig.json  vite.config.js
backend/: requirements.txt  server.py
capsule_brain/api/: server.py
capsule_brain/observability/: metrics.py
capsule_brain/security/: input_sanitizer.py
config/: providers.yaml  qdrant-config.yaml  redis.conf
configs/base/: redis.conf  settings.yaml
configs/dev/: settings.yaml
configs/prod/: settings.yaml
data/ingest/: .indexed_files.json  ai_basics.md  liquid_hive_docs.txt  programming_concepts.txt
data/qdrant_storage/: raft_state.json
data/test_rag/: ai_basics.txt
docker/base/: Dockerfile.nonroot
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CI-CD.md  CONTRIBUTING.md  CostProfiles.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEEDBACK_ORACLE_SYSTEM.md  GETTING_STARTED.md  GRADUATION_REPORT.md  GoldenSet.md  OBSERVABILITY.md  OPERATIONS.md  Planner.md  README.md  RELEASE.md  RUNBOOK.md  Runbook.md  SECRETS.md  SECRETS_MANAGEMENT.md  SECURITY.md  SLOs.md  TRAINING_PLAYBOOK.md  openapi.json
docs/adrs/: 001-technology-stack.md
docs/api/: authentication.md  endpoints.md  overview.md  sdks.md
docs/architecture/: system-overview.md
docs/deployment/: docker.md
docs/development/: backend-development.md  frontend-development.md
docs/user/: ADDITIONAL_CONSIDERATIONS.md  DEPLOYMENT.md  RUNBOOK.md  TRAINING_PLAYBOOK.md
docs/user-guide/: integration-examples.md
frontend/: .eslintrc.cjs  .eslintrc.js  .prettierrc  Dockerfile  eslint.config.js  index.html  jest.config.cjs  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts
frontend/public/: app-config.json  index.html
frontend/src/: App.d.ts.map  App.js  App.js.map  App.tsx  index.css  index.d.ts.map  index.js  index.js.map  main.d.ts.map  main.js.map  setupTests.d.ts.map  setupTests.js.map  store.d.ts  store.d.ts.map  store.js  store.js.map  store.ts  vite-env.d.ts
grafana/dashboards/: api_metrics.json  ds_router_dashboard.json  infra_metrics.json  memory-dashboard.json  ops_per_route_dashboard.json  training_metrics.json
gui/: package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
gui/public/: index.html
gui/src/: App.js  App.tsx
helm/: Chart.yaml  values.yaml
helm/liquid-hive/: Chart.yaml  values-aws-prod.yaml  values-dev.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  (+2 more)
hivemind/: confidence_modeler.py  config.py  resource_estimator.py  secrets_manager.py  swarm_protocol.py
internet_agent_advanced/: README_FULL_BUILD.md  __init__.py  config.py  fastapi_plugin.py  huggingface_client.py  main_tool.py  metrics.py  policy.py  scraper.py  scraper_playwright.py  search.py  trust_filter.py
k8s/: vllm-gpu.yaml
prometheus/: alertmanager.yml  alerts.yml
rag_index/: doc_store.json  faiss_index.json
safety/: __init__.py  post_guard.py  pre_guard.py
scripts/: __init__.py  build_monitor.py  build_optimizer.py  build_rag_index.py  curator.py  data_retention.py  docker_build_push.sh  enhanced_build.py  export_openapi.py  fix_logging.py  helm_template_install.sh  mongo-init.js  quick_verify.py  verify_build.py  verify_wiring.sh
services/: __init__.py
src/: __init__.py  config.py  error_handling.py  health_check.py  logging_config.py  performance_monitor.py  version.py
tests/: __init__.py  conftest.py  test_admin_guards.py  test_api.py  test_api_core.py  test_arena.py  test_basic.py  test_chat_and_ws.py  test_chat_error_handling.py  test_config.py  test_ds_router.py  test_env_example.py  test_input_sanitizer.py  test_planner.py  test_routing_paths.py  test_secrets_management.py  test_simple.py  test_smoke.py  test_smoke.sh
tools/: audit_repo.py  clean_repo.py  cleanup_repo.sh  dedupe_by_hash.py  repo_janitor.py
unified_runtime/: __main__.py  model_router.py  server.py
(+701 files in other folders)
